Add 5.3 release branches to main.yml workflow

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,9 +4,11 @@ on:
   push:
     branches:
       - swiftwasm
+      - swiftwasm-release/5.3
   pull_request:
     branches:
       - swiftwasm
+      - swiftwasm-release/5.3
 
 jobs:
   linux_build:
