Distribute 5.3 snapshots through GH Actions

--- a/.github/workflows/nightly-distribution.yml
+++ b/.github/workflows/nightly-distribution.yml
@@ -7,7 +7,11 @@ jobs:
     runs-on: macos-latest
     steps:
       - uses: actions/checkout@v1
-      - run: ./utils/webassembly/distribute-latest-toolchain.sh
+      - run: ./utils/webassembly/distribute-latest-toolchain.sh swiftwasm DEVELOPMENT
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         if: github.ref == 'refs/heads/swiftwasm'
+      - run: ./utils/webassembly/distribute-latest-toolchain.sh swiftwasm-release/5.3 5.3
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        if: github.ref == 'refs/heads/swiftwasm-release/5.3'
