--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,7 +40,7 @@ jobs:
         uses: actions/upload-artifact@v1
         with:
           name: linux-installable
-          path: ../swift-wasm-DEVELOPMENT-SNAPSHOT-linux.tar.gz
+          path: ../swift-wasm-5.3-SNAPSHOT-linux.tar.gz
 #      - name: Pack test results
 #        run: tar cJf swift-test-results.tar.gz ../build/*/swift-linux-x86_64/swift-test-results
 #      - name: Upload test results
@@ -67,7 +67,7 @@ jobs:
         uses: actions/upload-artifact@v1
         with:
           name: macos-installable
-          path: ../swift-wasm-DEVELOPMENT-SNAPSHOT-osx.tar.gz
+          path: ../swift-wasm-5.3-SNAPSHOT-osx.tar.gz
       - name: Upload packaging scripts
         uses: actions/upload-artifact@v1
         with:
